--- a/app/globals.css
+++ b/app/globals.css
@@ -96,7 +96,6 @@
         transform: translate(-50%, -40%) scale(1);
     }
 }
-
 @theme inline {
     --animate-first: moveVertical 30s ease infinite;
     --animate-second: moveInCircle 20s reverse infinite;
@@ -137,6 +136,15 @@
         }
         100% {
             transform: translateY(-50%);
+        }
+    }
+}
+@theme inline {
+    --animate-scroll: scroll var(--animation-duration, 40s) var(--animation-direction, forwards) linear infinite;
+
+    @keyframes scroll {
+        to {
+            transform: translate(calc(-50% - 0.5rem));
         }
     }
 }
